aws/projects/002-milliseconds-converter/templates/cf-template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  Cloud formation template for millisecond converter application. This app runs on application load banancer. In addition, it is observed by Autoscaling group
Parameters:
  
Resources:
  myALBSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Enable Http for ALB #required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
  
  myWebServerSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: String #required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !GetAtt myALBSecurityGroup.GroupId
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  
  myLaunchTemplate:
    Type: "AWS::EC2::LaunchTemplate"
    Properties:
      LaunchTemplateData:
        ImageId: ami-0947d2ba12ee1ff75
        InstanceType: t2.micro
        KeyName: my
        SecurityGroupIds: 
          - !GetAtt  myWebServerSecurityGroup.GroupId
        TagSpecifications: 
          - ResourceType: instance
              Tags: 
                - Key: Name
                  Value: !Sub Web server of ${AWS::StackName}
        UserData: 
          Fn::Base64:
            !Sub |
              #! /bin/bash
              yum update -y
              yum install python3 -y
              pip3 install flask
              TOKEN="3e245c3be489db5c8f4c243b77940f7fe9185970"
              FOLDER="XXXXXXXXXXXXXXXXXXXXXXXXX"
              curl -s --create-dirs -o "/home/ec2-user/templates/index.html" -L "$FOLDER"templates/index.html
              curl -s --create-dirs -o "/home/ec2-user/templates/result.html" -L "$FOLDER"templates/result.html
              curl -s --create-dirs -o "/home/ec2-user/app.py" -L "$FOLDER"app.py
              python3 /home/ec2-user/app.py
  
Outputs:
